--- a/vimrc.conf
+++ b/vimrc.conf
@@ -25,5 +25,6 @@
 " ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 " POSSIBILITY OF SUCH DAMAGE.
 
-let g:using_tab_indent=1
+" default use space for indent and full vimrc mode
+let g:using_tab_indent=0
 let g:using_full_vimrc=1
