chore(eVim): updated the eVim configure enabled install plugins

--- a/vimrc.conf
+++ b/vimrc.conf
@@ -27,4 +27,10 @@
 
 " default use space for indent and full vimrc mode
 let g:using_tab_indent=0
-let g:using_full_vimrc=1
+let g:using_matching_vimrc=1
+
+" enabled plugins
+let g:plugin_ctrlp_enabled=0
+let g:plugin_leaderf_enabled=1
+let g:plugin_pyflakes_enabled=1
+let g:plugin_jedi_enabled=1
